# gardens-app

./: .env.example  .gitignore  App.tsx  Cargo.toml  Dioxus.toml  README.md  app.config.js  app.json  babel.config.js  eas.json  gardens.sql  index.js  index.ts  package-lock.json  package.json  pubspec.yaml  structure.md  tailwind.config.js  tsconfig.json  wrangler.toml
android/: settings.gradle
android/app/: build.gradle  build.gradle.kts
app/: _layout.tsx  index.tsx
app/(tabs)/: _layout.tsx
app/auth/: _layout.tsx  recovery.tsx  setup.tsx  verify.tsx
app/chat/: [id].tsx  _layout.tsx
app/constants/: Colors.ts
app/contexts/: AuthContext.tsx  UserStore.tsx
assets/css/: tailwind.css
ios/: Podfile
ios/Gardens/: Info.plist  SplashScreen.storyboard
ios/Gardens.xcodeproj/: project.pbxproj
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: device.dart  garden.dart  message.dart  topic.dart  user.dart
lib/providers/: auth_provider.dart  garden_provider.dart  message_provider.dart  user_provider.dart
lib/services/: auth_service.dart  crypto_service.dart  database_service.dart  topic_service.dart
lib/theme/: colors.dart
lib/widgets/: chat_message.dart  garden_card.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
proto/: Cargo.toml
proto/.github/workflows/: rust.yml
proto/examples/: p2p_example.rs
proto/src/: auth.rs  entries.rs  identity.rs  lib.rs  p2p.rs  path.rs  types.rs
proto/tests/: auth_capabilities_integration.rs  auth_integration.rs  auth_path_integration.rs  full_integration.rs  group_encryption_test.rs  p2p_comprehensive_test.rs  p2p_integration.rs
src/: app.rs  index.ts  main.rs  styles.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/data/: migrations.rs  mod.rs  schema.rs  willow.rs
src/components/: CreateChannelModal.tsx  CreateGardenModal.tsx  DrawerLayout.tsx  ErrorScreen.tsx  GardenCard.tsx  LoadingScreen.tsx  PresenceInitializer.tsx  QRCodeExchange.tsx  RichUrlPreview.tsx  SearchBar.tsx  TagInput.tsx  UserAvatar.tsx  UserStatusIndicator.tsx
src/contexts/: PresenceContext.tsx
src/hooks/: useDebounce.ts  useGardens.tsx
src/models/: Channel.ts  Garden.ts  Memberships.ts  Message.ts  Requests.ts  User.ts
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+36 files in other folders)
