[package]
name = "garden-core"
version = "0.1.0"
edition = "2021"

description = "Core types and utilities for the Garden Protocol (E2EE P2P messaging)"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = "2.0"
rand = "0.8"
blake3 = "1.4"
thiserror = "1.0"
bincode = "1.3"
p2panda-core = "0.3.0"
p2panda-discovery = "0.3.0"
p2panda-group = { git = "https://github.com/jdbohrman/p2panda", branch = "message-group" }
p2panda-net = "0.3.0"
p2panda-sync = "0.3.0"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
env_logger = "0.10.1"
log = "0.4"

[dependencies.uuid]
version = "1.16.0"
# Lets you generate random UUIDs
features = [
    "v4",
]

[features]
default = []

[lib]
name = "garden_core"
path = "src/lib.rs"

[[example]]
name = "p2p_example"
path = "examples/p2p_example.rs"

[dev-dependencies]
rand = { version = "0.8", features = ["std_rng"] }